Fixed menu not showing neon, pi,... at 1024px

--- a/src/.vuepress/theme/styles/media-query.styl
+++ b/src/.vuepress/theme/styles/media-query.styl
@@ -43,7 +43,7 @@
 }
 
 // lg
-@media (min-width: 1024px) {
+@media (min-width: 1024px -1px) {
   .lg-grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -58,3 +58,10 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
+
+@media (min-width: (1025px))
+  .theme-container.no-sidebar
+    .sidebar
+      transform translateX(-100%)
+    .page
+      padding-left 0
